Did some minor fixes on smaller screens to look better.

--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,7 @@ ul, nav {
 	width: 100%;
 
 	@media (max-width: 1330px) {
+	margin-top: 20px;
 	display: flex;
 	flex-direction: column;
   	}
